feat: add `Book::tags`

--- a/book/src/02-templates/06-01-book.md
+++ b/book/src/02-templates/06-01-book.md
@@ -5,17 +5,18 @@ the template's [Context Mode][context-modes].
 
 ## Template Fields - Book
 
-| Attribute                   | Type       | Description      |
-| --------------------------- | ---------- | ---------------- |
-| `book`                      | dictionary | book object      |
-| `book.title`                | string     | title            |
-| `book.author`               | string     | author           |
-| `book.metadata`             | dictionary | metadata         |
-| `book.metadata.id`          | string     | unique id        |
-| `book.metadata.last_opened` | datetime   | date last opened |
-| `book.slugs`                | dictionary | slugs object     |
-| `book.slugs.title`          | string     | title slugified  |
-| `book.slugs.author`         | string     | author slugified |
+| Attribute                   | Type           | Description      |
+| --------------------------- | -------------- | ---------------- |
+| `book`                      | dictionary     | book object      |
+| `book.title`                | string         | title            |
+| `book.author`               | string         | author           |
+| `book.tags`                 | list\[string\] | the book's tags  |
+| `book.metadata`             | dictionary     | metadata         |
+| `book.metadata.id`          | string         | unique id        |
+| `book.metadata.last_opened` | datetime       | date last opened |
+| `book.slugs`                | dictionary     | slugs object     |
+| `book.slugs.title`          | string         | title slugified  |
+| `book.slugs.author`         | string         | author slugified |
 
 ## Example Data - Book
 
@@ -23,6 +24,7 @@ the template's [Context Mode][context-modes].
 {
   "title": "The Art Spirit",
   "author": "Robert Henri",
+  "tags": ["#artist", "#being", "#inspiration"],
   "metadata": {
     "id": "1969AF0ECA8AE4965029A34316813924",
     "last_opened": "2021-11-02T18:27:04.781938076Z"
@@ -40,6 +42,7 @@ the template's [Context Mode][context-modes].
 ---
 title: {{ book.title }}
 author: {{ book.author }}
+tags: {{ book.tags | join(sep=" ") }}
 id: {{ book.metadata.id }}
 last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%d-%H:%M") }}
 ---
