docs: fix spelling/usage, update to recent changes

--- a/book/src/01-templates/06-01-book.md
+++ b/book/src/01-templates/06-01-book.md
@@ -48,8 +48,9 @@ last-opened: {{ book.metadata.last_opened | date(format="%Y-%m-%d-%H:%M") }}
 ---
 ```
 
-> <i class="fa fa-info-circle"></i> Here the [`date`][date] filter is used to
-> format a `datetime` object into a human-readable date.
+> <i class="fa fa-info-circle"></i> Here [Tera][tera]'s [`date`][tera-date]
+> filter is used to format a `datetime` object into a human-readable date.
 
 [context-modes]: ./02-02-context-modes.md
-[date]: https://tera.netlify.app/docs/#date
+[tera]: https://tera.netlify.app/
+[tera-date]: https://tera.netlify.app/docs/#date
