fix: remove slugs from `export` command output

--- a/book/src/01-templates/06-01-book.md
+++ b/book/src/01-templates/06-01-book.md
@@ -5,18 +5,20 @@ the template's [Context Mode][context-modes].
 
 ## Template Fields - Book
 
-| Attribute                   | Type           | Description      |
-| --------------------------- | -------------- | ---------------- |
-| `book`                      | dictionary     | book object      |
-| `book.title`                | string         | title            |
-| `book.author`               | string         | author           |
-| `book.tags`                 | list\[string\] | the book's tags  |
-| `book.metadata`             | dictionary     | metadata         |
-| `book.metadata.id`          | string         | unique id        |
-| `book.metadata.last_opened` | datetime       | date last opened |
-| `book.slugs`                | dictionary     | slugs object     |
-| `book.slugs.title`          | string         | title slugified  |
-| `book.slugs.author`         | string         | author slugified |
+| Attribute                         | Type           | Description                |
+| --------------------------------- | -------------- | -------------------------- |
+| `book`                            | dictionary     | book object                |
+| `book.title`                      | string         | title                      |
+| `book.author`                     | string         | author                     |
+| `book.tags`                       | list\[string\] | the book's tags            |
+| `book.metadata`                   | dictionary     | metadata                   |
+| `book.metadata.id`                | string         | unique id                  |
+| `book.metadata.last_opened`       | datetime       | date last opened           |
+| `book.slugs`                      | dictionary     | slugs object               |
+| `book.slugs.title`                | string         | title slugified            |
+| `book.slugs.author`               | string         | author slugified           |
+| `book.slugs.metadata.last_opened` | datetime       | slugs metadata object      |
+| `book.slugs.metadata.last_opened` | datetime       | date last opened slugified |
 
 ## Example Data - Book
 
