feat: add custom templates to `export` and `backup`

--- a/book/src/01-templates/06-01-book.md
+++ b/book/src/01-templates/06-01-book.md
@@ -17,7 +17,7 @@ the template's [Context Mode][context-modes].
 | `book.slugs`                      | dictionary     | slugs object               |
 | `book.slugs.title`                | string         | title slugified            |
 | `book.slugs.author`               | string         | author slugified           |
-| `book.slugs.metadata.last_opened` | datetime       | slugs metadata object      |
+| `book.slugs.metadata`             | datetime       | slugs metadata object      |
 | `book.slugs.metadata.last_opened` | datetime       | date last opened slugified |
 
 ## Example Data - Book
